[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/about.tres" type="DynamicFont" id=1]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=3]
[ext_resource path="res://backgounds/nebula_-_6044 (720p).ogv" type="VideoStream" id=4]
[ext_resource path="res://levels/musictest.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Musictest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="nebula" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 4 )
autoplay = true
loop = true

[node name="Game name" type="Label" parent="."]
margin_left = 415.0
margin_top = 3.0
margin_right = 804.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 3 )
text = "Music Test"
align = 1
valign = 1

[node name="Stop" type="Label" parent="."]
margin_left = 5.0
margin_top = 672.0
margin_right = 230.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 1 )
text = "Press X to stop playback"

[node name="Bottomhud" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 510.5
margin_top = 97.0
margin_right = 769.5
margin_bottom = 808.0

[node name="Title Screen" type="Button" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 1 )
text = "Title Screen: X-Force Theme"

[node name="Galaxy" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 267.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 1 )
text = "Galaxy"

[node name="Wormhole" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 267.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Wormhole"

[node name="Abstract" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 267.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Abstract"

[node name="Galaxy2" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 267.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Galaxy2"

[node name="Lagoon" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 267.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Lagoon"

[node name="Orion" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 267.0
margin_bottom = 262.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Orion"

[node name="Space" type="Button" parent="VBoxContainer"]
margin_top = 266.0
margin_right = 267.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Space"

[node name="Stars" type="Button" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 267.0
margin_bottom = 338.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Stars"

[node name="Universe" type="Button" parent="VBoxContainer"]
margin_top = 342.0
margin_right = 267.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Universe"

[node name="Credits 1" type="Button" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 267.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Credits 1"

[node name="Credits 2" type="Button" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 267.0
margin_bottom = 452.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Credits 2"

[node name="Credits 3" type="Button" parent="VBoxContainer"]
margin_top = 456.0
margin_right = 267.0
margin_bottom = 490.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Credits 3"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 494.0
margin_right = 267.0
margin_bottom = 528.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/Title Screen" to="." method="_on_title_screen_pressed"]
[connection signal="pressed" from="VBoxContainer/Galaxy" to="." method="_on_galaxy_pressed"]
[connection signal="pressed" from="VBoxContainer/Wormhole" to="." method="_on_wormhole_pressed"]
[connection signal="pressed" from="VBoxContainer/Abstract" to="." method="_on_abstract_pressed"]
[connection signal="pressed" from="VBoxContainer/Galaxy2" to="." method="_on_galaxy_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Lagoon" to="." method="_on_lagoon_pressed"]
[connection signal="pressed" from="VBoxContainer/Orion" to="." method="_on_orion_pressed"]
[connection signal="pressed" from="VBoxContainer/Space" to="." method="_on_space_pressed"]
[connection signal="pressed" from="VBoxContainer/Stars" to="." method="_on_stars_pressed"]
[connection signal="pressed" from="VBoxContainer/Universe" to="." method="_on_universe_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits 1" to="." method="_on_credits_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits 2" to="." method="_on_credits_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits 3" to="." method="_on_credits_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
